# rucola

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.md  README.md  SECURITY.md  codecov.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  coverage.yml  dependency-review.yml  docs.yml  lint.yml  release.yml  tests.yml  typecheck.yml  zizmor.yml
docs/: contributing.md
docs/api/: normalization.md  preprocessing.md  results.md  rucola.md  tests.md
docs/guide/: algorithm.md  normalization.md  quickstart.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api/normalization/: index.html
latest/api/preprocessing/: index.html
latest/api/results/: index.html
latest/api/rucola/: index.html
latest/api/tests/: index.html
latest/changelog/: index.html
latest/contributing/: index.html
latest/guide/algorithm/: index.html
latest/guide/normalization/: index.html
latest/guide/quickstart/: index.html
latest/search/: search_index.json
notebooks/: saxony_station_homogenization.py
src/rucola/: __init__.py  _algorithms.py  _homogeneity.py  _normalization.py  _preprocessing.py  _results.py
tests/: __init__.py  conftest.py  test_algorithms.py  test_constructors.py  test_dwd_integration.py  test_normalization.py  test_preprocessing.py  test_readme.py  test_results.py  test_rucola.py  test_serialization.py  test_tests.py
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0/api/normalization/: index.html
v0.1.0/api/preprocessing/: index.html
v0.1.0/api/results/: index.html
v0.1.0/api/rucola/: index.html
v0.1.0/api/tests/: index.html
v0.1.0/changelog/: index.html
v0.1.0/contributing/: index.html
v0.1.0/guide/algorithm/: index.html
v0.1.0/guide/normalization/: index.html
v0.1.0/guide/quickstart/: index.html
v0.1.0/search/: search_index.json
